Fixed modal position in edit profile for landscape orientation on smaller screens

--- a/src/app/styles/editprofile.css
+++ b/src/app/styles/editprofile.css
@@ -141,22 +141,6 @@ button:hover {
     transform: translateX(-50%);
 }
 
-/* .my-modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
-    padding: 1rem;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 400px;
-  }
-   */
-
 @media (max-width: 1024px) {
 
     .edit-profile {
@@ -167,7 +151,6 @@ button:hover {
         background-color: #f2f2f2;
         color: black;
     }
-
     
     .my-snackbar {
         position: absolute;
@@ -181,6 +164,15 @@ button:hover {
 
 @media (max-width: 768px) {
 
+    .edit-profile {
+        left: auto !important;
+        top: 105px;
+        width: 100%;
+        height: 100%;
+        background-color: #f2f2f2;
+        color: black;
+    }
+
     .my-snackbar {
         position: absolute;
         width: auto !important;
@@ -191,29 +183,9 @@ button:hover {
         justify-content: center;
         align-items: center;
     }
-
-    .edit-profile {
-        left: auto !important;
-        top: 105px;
-        width: 100%;
-        height: 100%;
-        background-color: #f2f2f2;
-        color: black;
-    }
 }
 
 @media (max-width: 480px) {
-
-    .my-snackbar {
-        position: absolute;
-        width: 80% !important;
-        top: 120px !important;
-        left: 50% !important;
-        transform: translateX(-50%);
-        text-align: center !important;
-        justify-content: center;
-        align-items: center;
-    }
 
     .edit-profile {
         left: auto !important;
@@ -237,4 +209,37 @@ button:hover {
     .my-modal {
         width: 100% !important;
     }
+
+    .my-snackbar {
+        position: absolute;
+        width: 80% !important;
+        top: 120px !important;
+        left: 50% !important;
+        transform: translateX(-50%);
+        text-align: center !important;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media screen and (orientation: landscape) and (min-height: 300px) and (max-width: 1000px) {
+
+    .my-modal {
+        position: absolute;
+        margin-top: 30px;
+        justify-content: center !important;
+        align-items: center !important;
+    }
+
+}
+
+@media screen and (orientation: landscape) and (height: 280px) and (max-width: 1000px) {
+
+    .my-modal {
+        position: absolute;
+        margin-top: 37px;
+        justify-content: center !important;
+        align-items: center !important;
+    }
+
 }
